--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="position-absolute bottom-0 bg-light text-center text-lg-start w-100">
+<footer class="position-absolute bottom-0 mt-1 bg-light text-center text-lg-start w-100">
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: #4f3b78; color: white; font-size: 18px;">
     © 2020 Copyright:
