Worked on the views to send formularies with objects send by the url or filtering depending on other objects

--- a/core/main/templates/group/create.html
+++ b/core/main/templates/group/create.html
@@ -1,1 +1,7 @@
 {% extends 'create.html' %}
+{% block name %}
+  <h4>Project: {{ project.name }}</h4>
+{% endblock %}
+{% block descp %}
+  <p class="card-text">{{ project.description }}</p>
+{% endblock %}
