--- a/core/main/templates/project/list.html
+++ b/core/main/templates/project/list.html
@@ -40,7 +40,7 @@
                 <a class="btn" href="{% url 'main:group_create' up.pk %}" style="border: 2px solid #7dd87d;"><i class="fa-solid fa-person-circle-plus" style="color: #7dd87d;"></i></a>
               </td>
               <td>
-                <a class="btn" href="#" style="border: 2px solid #ffc93c;"><i class="fa-regular fa-pen-to-square" style="color: #ffc93c;"></i></a>
+                <a class="btn" href="{% url 'main:project_update' up.pk %}" style="border: 2px solid #ffc93c;"><i class="fa-regular fa-pen-to-square" style="color: #ffc93c;"></i></a>
               </td>
               <td>
                 <a class="btn" href="#" style="border: 2px solid #ff4057;"><i class="fa-regular fa-trash-can" style="color: #ff4057;"></i></a>
